<resources>
    <string name="app_name">ETerra</string>
    <string name="login_caps">LOGIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="havent_account">Don`t have an account?</string>
    <string name="register">Register</string>
    <string name="registration">REGISTRATION</string>
    <string name="pass_confirm">Confirm password</string>
    <string name="have_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="forgot_password_text">Enter your email and we will send you an email to reset your password</string>
    <string name="submit">Submit</string>
    <string name="err_msg_enter_email">Please enter your email</string>
    <string name="err_msg_enter_pass">Please enter password</string>
    <string name="err_msg_enter_pass_incorrect">Password does\'t match</string>
    <string name="err_msg_try_again">Error while registering, please try again later</string>
    <string name="msg_email_sent">Email sent successfully to reset your password!</string>
    <string name="fist_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number">Mobile number</string>
    <string name="err_msg_enter_first_name">Please enter your first name</string>
    <string name="err_msg_enter_last_name">Please enter your last name</string>

    <string name="title_complete_profile">PROFILE</string>
    <string name="rb_label_male">Male</string>
    <string name="rb_label_female">Female</string>
    <string name="content_description">image</string>
    <string name="err_msg_image_selection_failed">Error while picking image</string>
    <string name="err_msg_enter_mobile_number">Please enter mobile number</string>
    <string name="home">Home</string>

    <string name="double_click">Double click to exit</string>
    <string name="products">Products</string>
    <string name="orders">Orders</string>
    <string name="dashboard">Dashboard</string>
    <string name="settings">Settings</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_addresses">Address</string>
    <string name="btn_lbl_logout">Logout</string>
    <string name="add_product">Add Product</string>
    
    <string name="title_add_product">ADD PRODUCT</string>
    <string name="et_hint_product_title">Product Title</string>
    <string name="et_hint_product_price">Product Price ($)</string>
    <string name="et_hint_product_description">Product Description</string>
    <string name="et_hint_product_quantity">Product Quantity</string>
    <string name="err_msg_provide_product_image">Please provide product image</string>
    <string name="err_msg_provide_product_title">Please provide product title</string>
    <string name="err_msg_provide_product_description">Please provide product description</string>
    <string name="err_msg_provide_product_price">Please provide product price</string>
    <string name="err_msg_provide_product_quantity">Please provide product quantity</string>
    <string name="no_products_yet">No products yet</string>
    
    <string name="no_dashboard_items_found">No items found</string>

    <string name="delete">Delete</string>
    <string name="delete_dialog_message">Are you sure you want to delete the product?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="title_product_details">PRODUCT DETAILS</string>
    <string name="lbl_product_description">Product Description</string>
    <string name="lbl_product_details_stock_quantity">Stock Quantity</string>

    <string name="btn_lbl_add_to_card">ADD TO CART</string>
    <string name="btn_lbl_go_to_cart">GO TO CART</string>
    <string name="product_added_to_cart">Product was added to your cart.</string>
    
    <string name="title_my_cart">MY CART</string>
    <string name="no_item_found_in_cart">No item found in Cart</string>
    <string name="lbl_subtotal">Subtotal</string>
    <string name="lbl_shipping_charge">Shipping Charge</string>
    <string name="lbl_total_amount">Total Amount</string>
    <string name="btn_label_checkout">Checkout</string>
    <string name="action_cart">My Cart</string>
    <string name="lbl_out_of_stock">out of stock</string>

    <string name="title_address_list">Address List</string>
    <string name="no_address_found">No Address Found</string>
    <string name="lbl_add_address">Add Address</string>

    <string name="title_add_address">ADD ADDRESS</string>
    <string name="hint_full_name">Full name</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_address">Address</string>
    <string name="hint_zip_code">ZipCode</string>
    <string name="hint_additional_note">Additional note</string>
    <string name="hint_other_details">Other details</string>
    <string name="lbl_home">HOME</string>
    <string name="lbl_office">OFFICE</string>
    <string name="lbl_other">OTHER</string>
    <string name="err_msg_enter_full_name">Please enter full name</string>
    <string name="err_msg_enter_address">Please enter address</string>
    <string name="err_msg_enter_zip_code">Please enter zip code</string>
    <string name="title_select_address">Select Address</string>

    <string name="title_checkout">Checkout</string>
    <string name="checkout_lbl_product_items">Product Items</string>
    <string name="checkout_lbl_selected_address">Selected Address</string>
    <string name="checkout_lbl_items_receipt">Items Receipt</string>
    <string name="lbl_payment_mode">Payment Mode</string>
    <string name="lbl_cash_on_delivery">Cash On Delivery</string>
    <string name="btn_lbl_place_order">PLACE ORDER</string>

    <string name="no_orders_yet">No Orders Placed Yet.</string>

    <string name="title_my_order_details">My Order Details</string>
    <string name="order_details_lbl">Order Details</string>
    <string name="order_details_lbl_order_id">Order ID</string>
    <string name="order_details_lbl_order_date">Order Date</string>
    <string name="order_details_lbl_order_status">Order Status</string>
    <string name="order_status_pending">Pending</string>
    <string name="order_status_in_process">In Process</string>
    <string name="order_status_delivered">Delivered</string>
    <string name="order_details_lbl_shipping_address">Shipping Address</string>
    
    <string name="title_sold_products">Sold Products</string>
    <string name="no_products_sold_yet">No Products Sold Yet</string>
    
    <string name="title_sold_product_details">Details</string>

</resources>