<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.passreset.PassResetFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:paddingBottom="30dp">

        <FrameLayout
            android:id="@+id/fl_app_name"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/gradient_drawable"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.example.eterra.utils.customviews.ETBoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="42sp"
                android:typeface="serif" />

        </FrameLayout>

        <com.example.eterra.utils.customviews.ETBoldTextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/fl_app_name" />

        <com.example.eterra.utils.customviews.ETTextView
            android:id="@+id/tv_instructions"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/forgot_password_text"
            app:layout_constraintEnd_toEndOf="@id/tv_forgot_password"
            app:layout_constraintStart_toStartOf="@id/tv_forgot_password"
            app:layout_constraintTop_toBottomOf="@id/tv_forgot_password" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_email_l"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="15dp"
            android:focusable="false"
            android:hint="@string/email"
            app:layout_constraintTop_toBottomOf="@id/tv_instructions">

            <com.example.eterra.utils.customviews.ETEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.example.eterra.utils.customviews.ETButton
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="55dp"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="15dp"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_email_l" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>